--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body>
     <div class="container">
         <h1>С Новым Годом!!</h1>
-       <img src= "c:\Users\User\Desktop\IT\Марина\Новогодние проекты\santa.png" alt="Дед Мороз" class="santa" id="santa">
-       <audio src= "c:\Users\User\Desktop\IT\Марина\Новогодние проекты\Wham! - Last Christmas.mp3" loop controls></audio>
+       <img src= "santa.png" alt="Дед Мороз" class="santa" id="santa">
+       <audio src= "Wham! - Last Christmas.mp3" loop controls></audio>
     </div>
     <script>
         const santaImage = docunemt.getElementById('santa');
